--- a/Notebook/Connecting networks.tex
+++ b/Notebook/Connecting networks.tex
@@ -11,27 +11,13 @@
 \title{CCNA notebook}
 \date{\today}
 \begin{document}
-\titleAT{CCNA}
+\titleAT{Connecting networks}
 \thispagestyle{empty}{\tableofcontents}
-\listoffigures
-\listoftables
-
-\part{SCALING NETWORKS}
-\include{LANdesign}
-\include{vtp}
-\include{Layer3switching}
-\include{stp}
-\include{EtherChannel}
-\include{hsrp}
-\include{eigrp}
-\include{ospf}
-
-\part{CONNECTING NETWORKS}
 \include{WANconcepts}
+\include{PPP}
+\include{GRE,eBGP}
 \include{ACL}
 \include{Monitoring}
 \include{QoS}
-\include{PPP}
-\include{GRE,eBGP}
 \include{Troubleshooting}
 \end{document}
