--- a/Notebook/WANconcepts.tex
+++ b/Notebook/WANconcepts.tex
@@ -8,10 +8,26 @@ A WAN operates beyond the geographic scope of a LAN. WANs are used to interconne
 
 \begin{figure}[hbtp]
 \centering
-\subfigure[Point-to-point]{\includegraphics[ width=0.4\textwidth ]{pictures/WANtopology1.PNG}}\label{WANtopology1}
-\subfigure[Hub-and-Spoke]{\includegraphics[width=0.4\textwidth]{pictures/WANtopology2.PNG}}\label{WANtopology2}
-\subfigure[Full Mesh]{\includegraphics[width=0.4\textwidth]{pictures/WANtopology3.PNG}}\label{WANtopology3}
-\subfigure[Dual-homed]{\includegraphics[width=0.4\textwidth]{pictures/WANtopology4.PNG}}\label{WANtopology4}
+\subfigure[Point-to-point]
+	{
+		\includegraphics[width=0.4\textwidth]{pictures/WANtopology1.PNG}
+		\label{WANtopology1}	
+	}
+\subfigure[Hub-and-Spoke]
+	{
+		\includegraphics[width=0.4\textwidth]{pictures/WANtopology2.PNG}
+		\label{WANtopology2}
+	}
+\subfigure[Full Mesh]
+	{
+		\includegraphics[width=0.4\textwidth]{pictures/WANtopology3.PNG}
+		\label{WANtopology3}
+	}
+\subfigure[Dual-homed]
+	{
+		\includegraphics[width=0.4\textwidth]{pictures/WANtopology4.PNG}
+		\label{WANtopology4}
+	}
 \caption{Four common WAN topologies}
 \end{figure}
 
